2015-01-06  Barton E. Schaefer  <schaefer@zsh.org>

	* 34122: Src/module.c: allow NULL third argument as intended

2015-01-06  Mikael Magnusson  <mikachu@gmail.com>

	* 34138: Src/utils.c: wcs_nicechar: only deref widthp if it
	was given

	* 34120: Src/Zle/compctl.c, Src/jobs.c: Check contents instead
	of array

	* 34108: Src/utils.c: Don't leak ifs stuff

	* 34107: Src/hist.c: getsubsargs: free ptr1 before returning

	* 34134: Src/exec.c: anon funcs: don't leak shf and related data

	* 34112: Src/builtin.c: typeset: fix leak of oldval

	* 34106: Src/hist.c: use zhtricat instead of tricat

	* 34113: Src/builtin.c: whence: use dupstring to not leak memory

	* 34119: Src/Zle/complist.c: Fix leak of string in clnicezputs

	* 34105: Src/subst.c: remove dead code

	* 34121: Src/Zle/compresult.c: Remove unneeded NULL check

	* 34104: Src/Zle/compctl.c: Remove pointless check

	* 34115: Src/Zle/compcore.c: Fix size argument to zfree

	* 34117: Src/Zle/zle_utils.c: size_t is unsigned, use int instead

	* 34116: Src/Zle/computil.c: Check for NULL before passing
	to strlen

	* 34118: Src/hist.c: Don't crash when writing out history if
	HOST is unset

	* 34114: Src/builtin.c: emulate: Handle aborting from mixed
	-L/-c correctly

2015-01-06  Barton E. Schaefer  <schaefer@zsh.org>

	* 34103: Src/subst.c: fix ancient (workers/15872) thinko that
	doesn't seem to have mattered, but must in some obscure cases

2015-01-05  Daniel Shahaf <d.s@daniel.shahaf.name>

	* 34042: Completion/Unix/Command/_git: Respect tags for subcommand
	completion.

2015-01-05  Peter Stephenson  <p.stephenson@samsung.com>

	* Timofey Titovets: 34053: Completion/Linux/Command/_modutils:
	additional compression option for kernel modules.

2015-01-04  Barton E. Schaefer  <schaefer@zsh.org>

	* 34093: Src/builtins.c: "whence" should always return nonzero
	when it finds that nothing matches its arguments

2015-01-04  Peter Stephenson  <p.w.stephenson@ntlworld.com>
