@@ -1,3 +1,8 @@
+2015-01-07  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>
+
+	* 34144: Src/Zle/zle_tricky.c, Src/Zle/complist.c: allocate
+	origline by ztrdup(), not by dupstring()
+
 2015-01-06  Barton E. Schaefer  <schaefer@zsh.org>
 
 	* 34122: Src/module.c: allow NULL third argument as intended
